# stress-test

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  paper.yml
docs/: annotation_guidelines.md  related_work.md  reproducibility.md  result_provenance.md  zero_budget_plan.md
paper/: README.md  main.tex  references.bib
results/: FAIRNESS.md  HARDNESS.md  PER_DOMAIN.md  REPORT.md  STATS.md  fairness.json  hardness.json  per_domain.json  stats.json
scripts/: 01_build_dataset.py  02_apply_transforms.py  03_run_detectors.py  04_make_report.py  05_stats.py  06_fairness_analysis.py  07_hardness.py  08_finetune_deberta.py  09_build_human_edit.py  10_per_domain_calibration.py  11_make_annotation_batch.py  12_make_figures.py
src/stress_test/: __init__.py  semantics.py
src/stress_test/data/: __init__.py  non_native.py  schema.py  sources.py  splits.py
src/stress_test/detectors/: __init__.py  base.py  stylometric.py  tfidf_lr.py  transformer.py  zero_shot.py
src/stress_test/hardness/: __init__.py  score.py  signals.py
src/stress_test/metrics/: __init__.py  reliability.py
src/stress_test/report/: __init__.py  cards.py
src/stress_test/stats/: __init__.py  inference.py
src/stress_test/transforms/: __init__.py  base.py  compose.py  model_backed.py  perturbation.py
tests/: test_detectors.py  test_metrics.py  test_non_native.py  test_public_artifacts.py  test_splits_and_hardness.py  test_stats.py  test_transforms.py
