[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-test"
version = "0.1.0"
description = "STRESS-Test: Semantic-preserving Transformations for Robust Evaluation of Synthetic-text Screening"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohammad Arifur Rahman", email = "rahman.arif.cse@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "textstat>=0.7",
    "tqdm>=4.65",
]

[project.urls]
Homepage = "https://ari-fur.com/"
Repository = "https://github.com/razon1494/stress-test"
Issues = "https://github.com/razon1494/stress-test/issues"

[project.optional-dependencies]
# Model-backed transforms and detectors (Colab/Kaggle friendly, all open-weight)
models = [
    "torch>=2.1",
    "transformers>=4.40",
    "sentence-transformers>=2.6",
    "sacremoses>=0.1",
    "sentencepiece>=0.1.99",
]
data = ["datasets>=2.18"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
